Se creó con Colab

--- a/Prueba_de_Subida.ipynb
+++ b/Prueba_de_Subida.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOOD+jTfdBToFYEgoMM0ETk",
+      "authorship_tag": "ABX9TyO8y10+qHjLwFd89QUms7nx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,12 +23,12 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Will046-rA9/An-lisis-ZNI/blob/main/Prueba_de_Subida.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Will046-rA9/An-lisis-ZNI/blob/rama-willy/Prueba_de_Subida.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "rCVFHuoAH_jW",
         "outputId": "4a14e741-4365-448d-d201-6183bf7c85f4",
@@ -51,7 +51,9 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Holaaa, vengo a modifijar el archivo KJDAKSHKJASDH"
+      ],
       "metadata": {
         "id": "JzjCTZRWIDVn"
       },
