--- a/Prueba_de_Subida.ipynb
+++ b/Prueba_de_Subida.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOH0KZfK+NM/fiD5oWvA1A0",
+      "authorship_tag": "ABX9TyOIkC1ScNXE9dKpcUs8BHZe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,10 +53,42 @@
       "cell_type": "code",
       "source": [
         "# Holaaa, vengo a modifijar el archivo KJDAKSHKJASDH\n",
-        "#Tutorial: como cambiar una línea del archivo"
+        "#Tutorial: como cambiar una línea del archivo\n"
       ],
       "metadata": {
         "id": "JzjCTZRWIDVn"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Ahora toca hacer Merge\")"
+      ],
+      "metadata": {
+        "id": "xxd-9k-UW-AH",
+        "outputId": "4ce8420b-80f8-439a-9f9c-6e03b5eb144b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ahora toca hacer Merge\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "fuAJJNsnXF_X"
       },
       "execution_count": null,
       "outputs": []
