Se creó con Colab

--- a/ProyectoZNI (1).ipynb
+++ b/ProyectoZNI (1).ipynb
@@ -588,6 +588,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### **Corrección Datos de ubicación (Departamento, municipio y localidad)**"
+      ],
+      "metadata": {
+        "id": "uu-EL8e7fy6D"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Como hay muchas columnas, decidí que para identificar Departamento, Municipio y Localidad solo dejaría {Departamento, Municipio, ID_Localidad }\n",
@@ -5992,6 +6001,24 @@
     {
       "cell_type": "markdown",
       "source": [
+        "### **Corrección Datos de Energía (Energía Activa y Reactiva)** --> Parte de Simón"
+      ],
+      "metadata": {
+        "id": "6Onk71Xzgj7w"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **Corrección Datos de Potencia (Potencia Máxima)** --> Parte de Yoab"
+      ],
+      "metadata": {
+        "id": "j0iiGcH3g1cb"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# **Puntos a Analizar**"
       ],
       "metadata": {
@@ -6001,15 +6028,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## **1. Análisis de calidad del servicio por localidad**\n",
+        "## **1. Análisis de calidad del servicio por departamento**\n",
         "\n",
-        "* ¿Qué localidades tienen menos horas promedio de servicio al día?\n",
-        "\n",
-        "* ¿Cuántas tienen menos de 6h/día, 12h/día, 24h/día?\n",
-        "\n",
-        "* ¿Cómo varía el promedio de horas de servicio en el tiempo (por mes/año)?\n",
-        "\n",
-        "🔎 Puedes usar histogramas, agrupaciones por municipio y boxplots."
+        "* ¿Qué departamentos tienen menos horas promedio de servicio al día? ¿Cuántas tienen menos de 6h/día, 12h/día, 24h/día?  ¿Cómo varía el promedio de horas de servicio en el tiempo (por mes/año)?\n"
       ],
       "metadata": {
         "id": "BtYF1OrP31oG"
@@ -6080,13 +6101,11 @@
         "## **5. Correlación entre variables energéticas**\n",
         "\n",
         "* ¿Más horas de servicio se traducen en mayor consumo?\n",
-        "* ¿Mayor energía activa genera picos de potencia más altos?\n",
-        "* ¿Mayor energía activa implica más energía reactiva?\n",
+        "* ¿Mayor PB genera picos de potencia más altos?\n",
         "\n",
         "🔎 Usa gráficos de dispersión (`scatter plots`) y mapas de correlación (`heatmaps`) para visualizar relaciones entre:\n",
-        "- Energía Activa\n",
-        "- Energía Reactiva\n",
-        "- Potencia Máxima\n",
+        "- Potencia Base (Eficiencia)\n",
+        "- Potencia Máxima ()\n",
         "- Promedio Diario en Horas\n"
       ],
       "metadata": {
